istiofiles/destination-rule-recommendation-v4-v5-v6-v7.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  subsets:
  - labels:
      version: v4
    name: version-v4
  - labels:
      version: v5
    name: version-v5
  - labels:
      version: v6
    name: version-v6
  - labels:
      version: v7
    name: version-v7
---
